style: adding colors and fonts

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,4 @@
 // Colors
 
-$background: #f5f6fa;
 $primary: #373D4F;
-$secondary: #9098AE;
+$linear:  linear-gradient(154.23deg, #0F3A7B -58.45%, #0CFFFF 374.49%);
