--- a/styles/_movie.scss
+++ b/styles/_movie.scss
@@ -31,7 +31,13 @@
   line-height: 2rem;
   font-weight: 400;
   width: 100%;
-  max-width: 500px;
+  max-width: 540px;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5; 
+  -webkit-box-orient: vertical;
 }
 
 .movie button {
@@ -45,6 +51,7 @@
   margin-top: 20px;
   border-radius: 70px;
   background: $linear;
+  box-shadow: 0px 3px 50px rgba(0, 0, 0, 0.160784);
   transition: filter 0.6s;
 }
 
