--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,16 +38,35 @@ button:hover {
   align-items: stretch;
   width: 100%;
   height: 100vh;
+  position: relative;
+  overflow: hidden;
   padding: 45px 130px 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
 }
 
 main {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.app__image {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+}
+
+.app__image::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(90.18deg, rgba(13, 22, 46, 0.7) 23.21%, rgba(13, 22, 46, 0.0001) 96.69%);
+}
+
+.app__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 header {
@@ -112,7 +131,12 @@ header {
   line-height: 2rem;
   font-weight: 400;
   width: 100%;
-  max-width: 500px;
+  max-width: 540px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
 }
 
 .movie button {
@@ -126,6 +150,7 @@ header {
   margin-top: 20px;
   border-radius: 70px;
   background: linear-gradient(154.23deg, #0F3A7B -58.45%, #0CFFFF 374.49%);
+  box-shadow: 0px 3px 50px rgba(0, 0, 0, 0.160784);
   transition: filter 0.6s;
 }
 
