style: creating the side menu

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,7 @@
-@import './reset';
-@import './variables';
 @import './app';
 @import './header';
 @import './movie';
 @import './movies';
+@import './navigation';
+@import './reset';
+@import './variables';
