--- a/styles/_app.scss
+++ b/styles/_app.scss
@@ -7,13 +7,13 @@
   height: 100vh;
   position: relative;
   overflow: hidden;
-  padding: 45px 130px 0;
+  padding: 45px 80px 0 110px;
 }
 
 main {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  flex: 1;
 }
 
 .app__image {
