--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -2,18 +2,16 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
   margin-bottom: 64px;
 }
 
 .button__menu {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   row-gap: 10px;
-
   width: 46px;
-
+  z-index: 2;
   background: transparent;
 }
 
@@ -22,10 +20,23 @@ header {
   width: 100%;
   height: 3px;
   border-radius: 6px;
-
-  background: $primary;
+  background: #ffff;
+  transition: all 0.5s;
 }
 
 .button__menu span:last-child {
   width: 45%;
 }
+
+.button__menu.active span:last-child {
+  width: 100%;
+  transform: rotate(45deg) translateY(-17px)
+} 
+
+.button__menu.active span:nth-child(1) {
+  transform: rotate(-45deg) translateY(18px)
+} 
+
+.button__menu.active span:nth-child(2) {
+  opacity: 0;
+} 
