--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,37 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-@media (max-width: 1080px) {
-  html {
-    font-size: 93.75%;
-  }
-}
-@media (max-width: 720px) {
-  html {
-    font-size: 87.5%;
-  }
-}
-body, button, textarea, input {
-  color: #FFFFFF;
-  font: 400 1rem "Montserrat", sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-button {
-  border: 0;
-}
-
-button:hover {
-  cursor: pointer;
-}
-
 #app {
   display: flex;
   flex-direction: column;
@@ -40,13 +6,13 @@ button:hover {
   height: 100vh;
   position: relative;
   overflow: hidden;
-  padding: 45px 130px 0;
+  padding: 45px 80px 0 110px;
 }
 
 main {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  flex: 1;
 }
 
 .app__image {
@@ -79,9 +45,10 @@ header {
 .button__menu {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   row-gap: 10px;
   width: 46px;
+  z-index: 2;
   background: transparent;
 }
 
@@ -90,11 +57,25 @@ header {
   width: 100%;
   height: 3px;
   border-radius: 6px;
-  background: #FFFFFF;
+  background: white;
+  transition: all 0.5s;
 }
 
 .button__menu span:last-child {
   width: 45%;
+}
+
+.button__menu.active span:last-child {
+  width: 100%;
+  transform: rotate(45deg) translateY(-17px);
+}
+
+.button__menu.active span:nth-child(1) {
+  transform: rotate(-45deg) translateY(18px);
+}
+
+.button__menu.active span:nth-child(2) {
+  opacity: 0;
 }
 
 .feature__movie {
@@ -159,41 +140,12 @@ header {
   filter: brightness(0.85);
 }
 
-.movies {
-  display: flex;
-  flex-direction: column;
-  row-gap: 24px;
-}
-
-.movies h2 {
-  font-size: 1.75rem;
-  line-height: 2.125rem;
-  font-weight: 700;
-}
-
-.movies > div {
-  height: 640px;
-  overflow: auto;
-  padding-right: 44px;
-}
-
-.movies > div::-webkit-scrollbar {
-  width: 0.2rem;
-}
-
-/* Track */
-.movies > div::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.4);
-}
-
-/* Handle */
-.movies > div::-webkit-scrollbar-thumb {
-  background: var(--primary);
-}
-
-.movies ul {
-  display: flex;
-  flex-direction: column;
+#movies {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 24px 16px;
+  margin-top: 48px;
+  list-style: none;
 }
 
 .movie {
@@ -208,11 +160,8 @@ header {
   height: 150px;
   border-radius: 8px;
   overflow: hidden;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   background-image: linear-gradient(180deg, rgba(14, 23, 47, 0.0001) 11.72%, #0E172F 100%);
-}
-
-.movie:not(:first-child) {
-  margin-top: 50px;
 }
 
 .movie span {
@@ -256,4 +205,61 @@ header {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.navigation {
+  position: fixed;
+  top: 0;
+  right: -660px;
+  width: 660px;
+  height: 100%;
+  padding-top: 66px;
+  padding-left: 54px;
+  padding-right: 80px;
+  background: #093f7a;
+  transition: all 0.6s;
+}
+
+.navigation.active {
+  transform: translateX(-660px);
+}
+
+.navigation h2 {
+  font-size: 1.75rem;
+  line-height: 2.125rem;
+  font-weight: 700;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+body, button, textarea, input {
+  color: #FFFFFF;
+  font: 400 1rem "Montserrat", sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+button {
+  border: 0;
+}
+
+button:hover {
+  cursor: pointer;
 }/*# sourceMappingURL=styles.css.map */
