--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,6 +35,47 @@ main {
      object-fit: cover;
 }
 
+.form {
+  display: flex;
+  align-items: stretch;
+  -moz-column-gap: 24px;
+       column-gap: 24px;
+  width: 100%;
+  height: 48px;
+  margin-top: 28px;
+}
+
+.form input {
+  flex: 1;
+  border: 0;
+  height: 100%;
+  border-radius: 6px;
+  padding: 0 16px;
+  background: rgba(255, 255, 255, 0.1);
+  outline: none;
+}
+
+.form input::-moz-placeholder {
+  color: #c0c0c0;
+}
+
+.form input:-ms-input-placeholder {
+  color: #c0c0c0;
+}
+
+.form input::placeholder {
+  color: #c0c0c0;
+}
+
+.form button {
+  width: 48px;
+  border: 0;
+  border-radius: 6px;
+  background: var(--linear);
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -198,6 +239,7 @@ header {
   position: absolute;
   inset: 0;
   z-index: -1;
+  transition: all 0.6s;
 }
 
 .movie__image img {
@@ -205,6 +247,15 @@ header {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.movie.active-movie .movie__image {
+  filter: grayscale(1);
+  opacity: 0.5;
+}
+
+.movie.active-movie button {
+  display: none;
 }
 
 .navigation {
