--- a/styles/_movies.scss
+++ b/styles/_movies.scss
@@ -17,7 +17,7 @@
   padding-left: 10px;
   padding-bottom: 16px;
 
-  width: 265px;
+  width: 100%;
   height: 150px;
   border-radius: 8px;
   overflow: hidden;
@@ -64,6 +64,7 @@
   position: absolute;
   inset: 0;
   z-index: -1;
+
   transition: all 0.6s;
 }
 
@@ -80,4 +81,14 @@
 
 .movie.active-movie button {
   display: none;
+}
+
+@media(max-width: 650px) {
+  #movies {
+    grid-template-columns: 1fr;
+  }
+
+  .movie {
+    width: 100%;
+  }
 }
