style: add responsiveness section navigation

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -5,13 +5,11 @@
 
   width: 660px;
   height: 100%;
-  padding-top: 66px;
-  padding-left: 54px;
-  padding-right: 80px;
+  padding: 66px 80px 32px 54px;
 
   background: #093f7a;
   transition: all 0.6s;
-
+  overflow: auto;
 }
 
 .navigation.active {
@@ -22,4 +20,27 @@
   font-size: 1.75rem;
   line-height: 2.125rem;
   font-weight: 700;
+}
+
+@media(max-height: 750px) {
+  .navigation {
+    padding: 70px 40px 40px;
+  }
+}
+
+@media(max-width: 768px) {
+  .navigation {
+    width: 100vw;
+    right: -100vw;
+  }
+
+  .navigation.active {
+    transform: translateX(-100vw);
+  }
+}
+
+@media(max-width: 650px) {
+  .navigation {
+    padding: 44px 24px 24px;
+  }
 }
